feat: create api/v1/items/{id} repository
