# src/macksnow/pkg/router/items.go
@@ -69,14 +69,13 @@ func itemsIndexRouter(e *echo.Echo) {
 
 // @summary Get item info
 // @produce json
-// @param id query integer true "Item ID"
+// @param id path integer true "Item ID"
 // @success 200 {object} model.Item
 // @failure 400 {object} errorResponse
+// @failure 404 {object} errorResponse
 // @router /api/v1/items/{id} [get]
 func itemsShowRouter(e *echo.Echo) {
 	e.GET("/v1/items/:id", func(c echo.Context) error {
-		// TODO: 本実装
-
 		req := c.Param("id")
 
 		id, err := strconv.Atoi(req)
@@ -85,16 +84,14 @@ func itemsShowRouter(e *echo.Echo) {
 			return c.JSON(http.StatusBadRequest, res)
 		}
 
-		sampleItem := &model.Item{
-			ID:        id,
-			Name:      "TestItem",
-			Summary:   "TestSummary",
-			URI:       "https://www.amazon.co.jp",
-			CreatedAt: time.Now(),
-			UpdatedAt: time.Now(),
+		item, err := repo.FindItem(id)
+		if err != nil {
+			// TODO: 内部エラーとレコード無しのハンドリングをする
+			res := &errorResponse{Message: err.Error()}
+			return c.JSON(http.StatusNotFound, res)
 		}
 
-		return c.JSON(http.StatusOK, sampleItem)
+		return c.JSON(http.StatusOK, item)
 	})
 }
 
